data-index-authX/httpd.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: NodePort
  selector:
    app: httpd
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30004
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  labels:
    app: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
        data-index-access: "true"
    spec:
      containers:
        - name: httpd-container
          image: quay.io/orchestrator/httpd-mod-oauth2:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: httpd-config
              mountPath: "/usr/local/apache2/conf/httpd.conf"
              subPath: httpd.conf
            - name: httpd-oauth2-config
              mountPath: "/usr/local/apache2/conf/extra/oauth2.conf"
              subPath: oauth2.conf
      volumes:
        - name: httpd-config
          configMap:
            name: httpd-conf
        - name: httpd-oauth2-config
          configMap:
            name: httpd-oauth2-conf
