data-index-authX/dataindex-networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: data-index-policy
spec:
  podSelector:
    matchLabels:
      app: data-index
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              data-index-access: "true"
